--- a/app/views/wechat/post_server.xml.erb
+++ b/app/views/wechat/post_server.xml.erb
@@ -3,5 +3,5 @@
 <FromUserName>server</FromUserName>
 <CreateTime>12345678</CreateTime>
 <MsgType>text</MsgType>
-<Content>@content</Content>
+<Content><%=@content%></Content>
 </xml>
