--- a/app/views/wechat/post_server.xml.erb
+++ b/app/views/wechat/post_server.xml.erb
@@ -1,6 +1,6 @@
 <xml>
-<ToUserName>shanwa</ToUserName>
-<FromUserName>server</FromUserName>
+<ToUserName><%=@client_user%></ToUserName>
+<FromUserName><%=@server_user%></FromUserName>
 <CreateTime>12345678</CreateTime>
 <MsgType>text</MsgType>
 <Content><%=@content%></Content>
