--- a/app/views/wechat/post_server.xml.erb
+++ b/app/views/wechat/post_server.xml.erb
@@ -2,6 +2,8 @@
 <ToUserName><%=@client_user%></ToUserName>
 <FromUserName><%=@server_user%></FromUserName>
 <CreateTime>12345678</CreateTime>
-<MsgType>text</MsgType>
-<Content><%=@content%></Content>
+<MsgType>voice</MsgType>
+<Voice>
+<MediaId><%=@content%></MediaId>
+</Voice>
 </xml>
