--- a/app/views/wechat/post_server.xml.erb
+++ b/app/views/wechat/post_server.xml.erb
@@ -4,6 +4,6 @@
 <CreateTime>12345678</CreateTime>
 <MsgType>voice</MsgType>
 <Voice>
-<MediaId><%=@content%></MediaId>
+<MediaId><%=@media_id%></MediaId>
 </Voice>
 </xml>
