--- a/app/views/wechat/post_server.xml.erb
+++ b/app/views/wechat/post_server.xml.erb
@@ -1,4 +1,4 @@
-<xml>
+<!-- <xml>
 <ToUserName><%=@client_user%></ToUserName>
 <FromUserName><%=@server_user%></FromUserName>
 <CreateTime>12345678</CreateTime>
@@ -6,4 +6,12 @@
 <Voice>
 <MediaId><%=@media_id%></MediaId>
 </Voice>
+</xml> -->
+
+<xml>
+<ToUserName><%=@client_user%></ToUserName>
+<FromUserName><%=@server_user%></FromUserName>
+<CreateTime>12345678</CreateTime>
+<MsgType>text</MsgType>
+<Content>成功</Content>
 </xml>
